# tifa-harness

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  evaluation-nightly.yml  release.yml
docker/: apparmor-tifa  runner.Dockerfile  seccomp-tifa-v1.json
docs/: capability-evidence.md  configuration.md
evaluation/: baselines.v1.json  case_card.schema.json  evaluation_result.schema.json  evidence_bundle.schema.json  generate_fixtures.py  professional_suite.v1.json  real_repo_suite.v1.json  replay_benchmark_matrix.json  replay_spec.schema.json
evaluation/artifacts/: tifa_full.json  tifa_full_cases.json  tifa_smoke.json  tifa_smoke_cases.json  workspace-performance.json
evaluation/artifacts/harness-ab/deepseek-v4-flash-paired-30x3/: full.decision.json  full.manifest.json  harness-ab-report.json  (+3 more)
evaluation/artifacts/measured-live/: ollama-qwen25-coder-3b.json  professional-deepseek-v4-flash-30-smoke.json  professional-ollama-30-v0.5.0.json  professional-release-readiness-v0.5.0.json
evaluation/fixtures/: context_01.json  context_02.json  context_03.json  cross_01.json  cross_02.json  cross_03.json  cross_04.json  doc_01.json  doc_02.json  doc_03.json  doc_04.json  resume_01.json  resume_02.json  resume_03.json  side_effect_01.json  side_effect_02.json  side_effect_03.json  single_01.json  single_02.json  single_03.json  single_04.json  tool_01.json  tool_02.json  tool_03.json
tests/: test_complete_spec.py  test_evaluation_v2.py  test_execution.py  test_harness_ab.py  test_inheritance.py  test_live_provider.py  test_production.py  test_professional.py  test_providers.py  test_replay.py  test_runtime.py  test_tools_context.py  test_workspace_index.py
tifa/: __init__.py  benchmark.py  case_evaluation.py  cases.py  cli.py  context_manager.py  contracts.py  doctor.py  eval_suite.py  evaluation.py  execution.py  harness_ab.py  live_eval.py  memory.py  models.py  observability.py  operations.py  performance.py  providers.py  replay.py  reporting.py  result_contract.py  runtime.py  semantic_index.py  stores.py  tools.py  verifier.py  workspace.py
