[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tifa-agent"
version = "0.3.0"
description = "A verifiable local coding agent harness with durable execution and replay"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "jsonschema>=4.21"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
tifa = "tifa.cli:main"

[tool.setuptools.packages.find]
include = ["tifa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
