[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tifa-agent"
version = "0.4.0"
description = "A verifiable local coding agent harness with durable execution and replay"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "jsonschema>=4.21", "psutil>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "build>=1.2"]

[project.scripts]
tifa = "tifa.cli:main"

[tool.setuptools.packages.find]
include = ["tifa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tifa"]
omit = ["tifa/cli.py", "tifa/__main__.py", "tifa/live_eval.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 180

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
